manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voteapp
  labels:
    app: vote-app
spec:
  selector:
    matchLabels:
      app: vote-app
  replicas: 2
  template:
    metadata:
      labels:
        app: vote-app
    spec:
      containers:
      - name: voteapp
        image: valurban4/brief-8:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: voteapp
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: vote-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    app: redis-bd
spec:
  serviceName: "redis-service"
  selector:
    matchLabels:
      app: redis-bd
  template:
    metadata:
      labels:
        app: redis-bd
    spec:
      volumes: 
      - name: redisclaim
        persistentVolumeClaim:
          claimName: redisclaim
      containers:
      - name: redis
        image: redis
        args: ["--requirepass","$(REDIS_PWD)"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: redisclaim
          mountPath: "/data"
---
apiVersion: v1
kind: Service
metadata:
  name: clusteredis
spec:
  type: ClusterIP
  ports:
  - port: 6379
  selector:
    app: redis-bd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressvote
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: voteapp
            port:
              number: 80
